; ModuleID = '/home/carl/AnghaBench/linux/drivers/pci/extr_pci-sysfs.c_rescan_store.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/pci/extr_pci-sysfs.c_rescan_store.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bus_type = type { i32 }
%struct.pci_bus = type { i32 }

@EINVAL = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.bus_type*, i8*, i64)* @rescan_store to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @rescan_store(%struct.bus_type* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca %struct.bus_type*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca %struct.pci_bus*, align 8
  store %struct.bus_type* %0, %struct.bus_type** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  store %struct.pci_bus* null, %struct.pci_bus** %9, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = call i64 @kstrtoul(i8* %10, i32 0, i64* %8)
  %12 = icmp slt i64 %11, 0
  br i1 %12, label %13, label %16

13:                                               ; preds = %3
  %14 = load i64, i64* @EINVAL, align 8
  %15 = sub i64 0, %14
  store i64 %15, i64* %4, align 8
  br label %32

16:                                               ; preds = %3
  %17 = load i64, i64* %8, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %30

19:                                               ; preds = %16
  %20 = call i32 (...) @pci_lock_rescan_remove()
  br label %21

21:                                               ; preds = %25, %19
  %22 = load %struct.pci_bus*, %struct.pci_bus** %9, align 8
  %23 = call %struct.pci_bus* @pci_find_next_bus(%struct.pci_bus* %22)
  store %struct.pci_bus* %23, %struct.pci_bus** %9, align 8
  %24 = icmp ne %struct.pci_bus* %23, null
  br i1 %24, label %25, label %28

25:                                               ; preds = %21
  %26 = load %struct.pci_bus*, %struct.pci_bus** %9, align 8
  %27 = call i32 @pci_rescan_bus(%struct.pci_bus* %26)
  br label %21

28:                                               ; preds = %21
  %29 = call i32 (...) @pci_unlock_rescan_remove()
  br label %30

30:                                               ; preds = %28, %16
  %31 = load i64, i64* %7, align 8
  store i64 %31, i64* %4, align 8
  br label %32

32:                                               ; preds = %30, %13
  %33 = load i64, i64* %4, align 8
  ret i64 %33
}

declare dso_local i64 @kstrtoul(i8*, i32, i64*) #1

declare dso_local i32 @pci_lock_rescan_remove(...) #1

declare dso_local %struct.pci_bus* @pci_find_next_bus(%struct.pci_bus*) #1

declare dso_local i32 @pci_rescan_bus(%struct.pci_bus*) #1

declare dso_local i32 @pci_unlock_rescan_remove(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
